# ollama-coder

./: .gitignore  HANDOFF.md  README.md  TASKS.md  pyproject.toml
examples/: README.md
examples/git-hooks/: pre-commit
examples/github-actions/: ollamacode-review.yml
homebrew-ollama-coder/Formula/: ollama-coder.rb
ollama_code/: __init__.py  cli.py
ollama_coder/: __init__.py  cli.py  commands.py  hooks.py  session.py  skills.py  subagent.py
tests/: README.md  test_core_tools.py  test_extensibility.py  test_hooks.py
~/Desktop/: app.py
